# hashing

./: .gitignore  CRYPTANALYSIS_TESTS.md  Cargo.toml  QUICKSTART.md  README-RUST.md  README.md  SPECIFICATION.md  benchmark.py  chronohash.py  examples.py  test_chronohash.py  test_cryptanalysis.py
benches/: chronohash_bench.rs
examples/: performance.rs
src/: lib.rs  main.rs
tests/: cryptanalysis.rs
